--- a/Baha'i/Others/ROB/V2/p001-028Ch01.html
+++ b/Baha'i/Others/ROB/V2/p001-028Ch01.html
@@ -402,7 +402,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p25">25</a></center><p>
-	   * See <i>The Dawn-Breakers</i>.<p>
+	   * See <a href="../../DBNN/p430-464Ch21.html#para35"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
 	   32. Quoted by Fádil-i-Mázindarání in <i>Asráru'l-Áthár</i>, vol. III, p. 242.
 	   </small></td>
