--- a/Baha'i/Others/ROB/V2/p029-054Ch02.html
+++ b/Baha'i/Others/ROB/V2/p029-054Ch02.html
@@ -422,7 +422,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p54">54</a></center><p>
 	   <hr>
-	   26. Quoted in <i>The Dawn-Breakers</i>, p. 96 (Brit.), p. 138 (U.S.).<p>
+	   26. Quoted in <i>The Dawn-Breakers</i>, p. 96 (Brit.), <a href="../../DBNN/p129-141Ch07.html#para15">p. 138</a> (U.S.).<p>
 	   </small></td>
 </tr>
 </table>
