--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -359,7 +359,7 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
        <td></td>
        <td VALIGN=top><small><center><a name="p86">86</a></center><p>
 	   * The significance and potency of the <a href="../V1/p351-363Index.html#WordofGod">Word of God</a> is more fully explained in vol. 1.<p>
-	   † Although the claim of the Báb was that he was the 'Gate' to a greater revelation than His own, nevertheless the general public recognized the title of the Báb as indicating that He was the intermediary between the Qá'im and the people. In fact, some of His followers lost their faith or were shaken when they heard His claim to be the Qá'im Himself. See for instance the story of 'Azím, <i>The Dawn-Breakers</i>, pp. 227-8 (Brit.), p. 313 (U.S.).<p>
+	   † Although the claim of the Báb was that he was the 'Gate' to a greater revelation than His own, nevertheless the general public recognized the title of the Báb as indicating that He was the intermediary between the Qá'im and the people. In fact, some of His followers lost their faith or were shaken when they heard His claim to be the Qá'im Himself. See for instance the story of 'Azím, <i>The Dawn-Breakers</i>, pp. 227-8 (Brit.), <a href="../../DBNN/p309-323Ch18.html#para7">p. 313</a> (U.S.).<p>
 	   ‡ See also vol. 1, pp. <a href="../V1/p257-282Ch16.html#p278">278</a>-9.
 	   </small></td>
 </tr>
