--- a/Baha'i/Others/ROB/V2/p107-136Ch05.html
+++ b/Baha'i/Others/ROB/V2/p107-136Ch05.html
@@ -87,7 +87,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p110">110</a></center><p>
 	   * In those days, the believers were very careful not to disclose their Faith indiscriminately to the public. They taught the Faith only to those who were truly sincere.<p>
-	   † One of the outstanding followers of the Báb and Bahá'u'lláh. For more information about him refer to The Dawn-Breakers, Memorials of the Faithful and The Revelation of Bahá'u'lláh, <a href="../V1/p351-363Index.html#Muhammad-Sádiq-i-Khurásání,Mullá">vol. 1</a>.<p>
+	   † One of the outstanding followers of the Báb and Bahá'u'lláh. For more information about him refer to <a href="../../DBNN/p679-685Index.html#DBNN-Sádiq-i-Khurásání,Mullá"><i>The Dawn-Breakers</i></a>, <i>Memorials of the Faithful</i> and <i>The Revelation of Bahá'u'lláh</i>, <a href="../V1/p351-363Index.html#Muhammad-Sádiq-i-Khurásání,Mullá">vol. 1</a>.<p>
 	   ‡ This was considered a very large sum of money in those days.<p>
 	   § The Báb actually stayed three nights in Káshán. Some historians have stated that one of the reasons that Hájí Mírzá Jání gave to the officers for entertaining the Báb in his house, was that the two of them were merchants and Hájí Mírzá Jání was anxious to clear up his accounts with Him.<p>
 	   <hr>
@@ -370,8 +370,8 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p129">129</a></center><p>
-	   * The first person to believe in the Báb. For further information see <i>The Dawn-Breakers</i>.<p>
-	   † See <i>The Dawn-Breakers</i>.<p>
+	   * The first person to believe in the Báb. For further information see <a href="../../DBNN/p679-685Index.html#DBNN-Husayn-i-Bushrú'í,Mullá"><i>The Dawn-Breakers</i></a>.<p>
+	   † See <a href="../../DBNN/p324-377Ch19.html"><i>The Dawn-Breakers</i></a>.<p>
 	   ‡ The words attributed to Bahá'u'lláh are not necessarily His exact words. These are the recollections of Abá Badí', but convey the sense of what He said.<p>
 	   <hr>
 	   20. Quoted by Muhammad-'Alíy-i-Faizi, <i>L'álíy-i-Darakhshán</i>, p. 191.
@@ -427,7 +427,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p133">133</a></center><p>
-	   * An historic house which was once the centre of great activities for the Bábís in Mashhad. See <i>The Dawn-Breakers</i>.
+	   * An historic house which was once the centre of great activities for the Bábís in Mashhad. See <a href="../../DBNN/p123-128Ch06.html#para5"><i>The Dawn-Breakers</i></a>.
 	   </small></td>
 </tr>
 <tr>
