--- a/Baha'i/Others/ROB/V2/p171-193Ch08.html
+++ b/Baha'i/Others/ROB/V2/p171-193Ch08.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V2\p171-193Ch08.html -->
 
+<!-- issues list
+
+1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 201 (Brit.), p. 181 (U.S.). -changed to- p. 281 (U.S.)
+
+-->
+
+
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Chapter 8</title>
@@ -42,7 +49,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p171">171</a></center><p>
-	   * See <i>The Dawn-Breakers</i>.
+	   * See <a href="../../DBNN/p268-287Ch15.html#para24"><i>The Dawn-Breakers</i></a>.
 	   </small></td>
 </tr>
 <tr>
@@ -55,7 +62,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p172">172</a></center><p>
 	   <hr>
-	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 201 (Brit.), p. 181 (U.S.).
+	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 201 (Brit.), <a href="../../DBNN/p268-287Ch15.html#para28">p. 281</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -67,7 +74,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p173">173</a></center><p>
 	   <hr>
-	   2. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 203 (Brit.), pp. 283-4 (U.S.).
+	   2. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 203 (Brit.), pp. <a href="../../DBNN/p268-287Ch15.html#para28">283</a>-4 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -79,9 +86,9 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p174">174</a></center><p>
-	   * Áqá Muhammad-Hádí served Táhirih in many other ways. For instance, he was among those who accompanied her to Badasht and there acted as a guard at the gate of the garden which was assigned to her by Bahá'u'lláh. For details of the conference of Badasht, see <i>The Dawn-Breakers</i>.<p>
+	   * Áqá Muhammad-Hádí served Táhirih in many other ways. For instance, he was among those who accompanied her to Badasht and there acted as a guard at the gate of the garden which was assigned to her by Bahá'u'lláh. For details of the conference of Badasht, see <a href="../../DBNN/p288-300Ch16.html"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
-	   3. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 195 (Brit.), pp. 273-5 (U.S.).
+	   3. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 195 (Brit.), pp. <a href="../../DBNN/p268-287Ch15.html#para10">273</a>-5 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -98,7 +105,7 @@
 	   * One of the Apostles of Bahá'u'lláh. More details of his life will be given in <a href="../V3/p467-483Index.html#Kázim-i-Samandar,Shaykh">vol. III</a>.<p>
 	   † Áqá Muhammad-Hádíy-i-Farhádí, the husband of Khátún Ján. (A.T.)<p>
 	   <hr>
-	   4. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 203-4 (Brit.), p. 284 (U.S.).
+	   4. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 203-4 (Brit.), <a href="../../DBNN/p268-287Ch15.html#para29">p. 284</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -203,8 +210,8 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p180">180</a></center><p>
-	   * The founder of the Shaykhí sect of Islám. See <i>The Dawn-Breakers</i>.<p>
-	   † The scene of many battles between three hundred and thirteen Bábís, the heroic defenders of the fortress, and the forces of the army--battles which were forced upon the Bábís and resulted in the defeat of a powerful army. Later most of its defenders were martyred. For more information, see <i>The Dawn-Breakers</i>.<p>
+	   * The founder of the Shaykhí sect of Islám. See <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p165-251Notes.html#note171">Note 171</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para176">p. 120</a>; <i>The Dawn-Breakers</i>, <a href="../../DBNN/p001-018Ch01.html">ch. 1</a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>. <p>
+	   † The scene of many battles between three hundred and thirteen Bábís, the heroic defenders of the fortress, and the forces of the army--battles which were forced upon the Bábís and resulted in the defeat of a powerful army. Later most of its defenders were martyred. For more information, see <a href="../../DBNN/p324-377Ch19.html"><i>The Dawn-Breakers</i></a>.<p>
 	   ‡ Literally 'the dawning-place of the mention of God', a Bahá'í House of Worship.
 	   </small></td>
 </tr>
@@ -233,7 +240,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p182">182</a></center><p>
-	   * The first eighteen disciples of the Báb.<p>
+	   * The first <a href="../../DBNN/BabsAutographTablets.html">eighteen disciples</a> of the Báb.<p>
 	   † Bahá'u'lláh.<p>
 	   <hr>
 	   6. Quoted by Shoghi Effendi, <i>The Advent of Divine Justice</i>, p. 67.<p>
