--- a/Baha'i/Others/ROB/V2/p194-221Ch09.html
+++ b/Baha'i/Others/ROB/V2/p194-221Ch09.html
@@ -153,7 +153,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p202">202</a></center><p>
 	   * For a brief account of his eventful life see <a href="p438-450Apndx_III.html">Appendix III</a> and vol. 1, pp. <a href="../V1/p018-044Ch03.html#p28">28</a>-9.<p>
-	   † Concerning the Shaykhí sect and its leader Siyyid Kázim, see <i>The Dawn-Breakers</i>.<p>
+	   † Concerning the Shaykhí sect and its leader Siyyid Kázim, see <a href="../../DBNN/p019-046Ch02.html"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
 	   3. Hájí Mírzá Haydar-'Alí, <i>Bihjatu's-Sudúr</i>, p. 80 ff.
 	   </small></td>
@@ -168,7 +168,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p203">203</a></center><p>
 	   * Soon after His declaration the Báb instructed His disciples to spread the news but not to disclose His identity until a later date, when it would be announced.<p>
-	   † See <i>The Dawn-Breakers</i>.<p>
+	   † See <a href="../../DBNN/p170-198Ch09.html#para55"><i>The Dawn-Breakers</i></a>.<p>
 	   ‡ Mírzá Hasan, entitled by Bahá'u'lláh the 'King of the Martyrs'. (A.T.)
 	   </small></td>
 </tr>
@@ -181,9 +181,9 @@
        <td VALIGN=top><small><center><a name="p204">204</a></center><p>
 	   * Mírzá Husayn, entitled the 'Beloved of the Martyrs'. A more detailed account of their lives will be given in <a href="../V4/p073-090Ch05.html">future volumes</a>. (A.T.)<p>
 	   † Reference to Munírih Khánum's marriage with 'Abdu'l-Bahá. <p>
-	   ‡ See <i>The Dawn-Breakers</i> for details.<p>
+	   ‡ See <a href="../../DBNN/p288-300Ch16.html"><i>The Dawn-Breakers</i></a> for details.<p>
 	   <hr>
-	   4. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 149-50 (Brit.), pp. 208-9 (U.S.).
+	   4. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 149-50 (Brit.), pp. <a href="../../DBNN/p199-216Ch10.html#para11">208</a>-9 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -196,7 +196,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p205">205</a></center><p>
 	   * See vol. 1, p. <a href="../V1/p012-017Ch02.html#p16">16</a>.<p>
-	   † Bahá'u'lláh had eight paternal uncles. Among those to whom He taught the Faith of the Báb in Núr were some uncles. Two of them rejected the Cause of God and actively rose up against it. These were Shaykh 'Azízu'lláh and Safí Qulí Big. Two others, Mullá Zaynu'l-'Ábidín and Karbilá'í Zamán, became ardent believers. The former accompanied Bahá'u'lláh to the fortress of Shaykh Tabarsí, and when Bahá'u'lláh was bastinadoed in Ámul, threw himself upon His feet and was beaten so much that he fainted. For details of the incident at Ámul, see The Dawn-Breakers.
+	   † Bahá'u'lláh had eight paternal uncles. Among those to whom He taught the Faith of the Báb in Núr were some uncles. Two of them rejected the Cause of God and actively rose up against it. These were Shaykh 'Azízu'lláh and Safí Qulí Big. Two others, Mullá Zaynu'l-'Ábidín and Karbilá'í Zamán, became ardent believers. The former accompanied Bahá'u'lláh to the fortress of Shaykh Tabarsí, and when Bahá'u'lláh was bastinadoed in Ámul, threw himself upon His feet and was beaten so much that he fainted. For details of the incident at Ámul, see <a href="../../DBNN/p324-377Ch19.html#para77"><i>The Dawn-Breakers</i></a>.
 	   </small></td>
 </tr>
 <tr>
@@ -208,7 +208,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p206">206</a></center><p>
 	   * See vol. 1, p. <a href="../V1/p045-052Ch04.html#p50">50</a>.<p>
-	   † Epistle to the Son of the Wolf, p. <a href="../../../Baha/EW/p001-182.html#p170">170</a>.
+	   † <i>Epistle to the Son of the Wolf</i>, p. <a href="../../../Baha/EW/p001-182.html#p170">170</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -300,7 +300,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p210">210</a></center><p>
-	   * See <i>The Dawn-Breakers</i>.<p>
+	   * See <a href="../../DBNN/p430-464Ch21.html#para5"><i>The Dawn-Breakers</i></a>.<p>
 	   † The tenth of Muharram, the anniversary of the martyrdom of the Imám Husayn, which fell in that year on 26 November 1849.
 	   <hr>
 	   <hr>
@@ -335,7 +335,7 @@
 	   * See pp. <a href="p301-336Ch15.html#p328">328</a>-9 ff.<p>
 	   † In Shí'ah Islám, it is believed that after the advent of the Qá'im (the Promised One of Islám), Imám Husayn will return. The name of Bahá'u'llah was Husayn-'Alí. It was in the summer of 1851 that Bahá'u'lláh encountered Shaykh Hasan in Karbilá and confided to him His station. See vol. 1, pp. <a href="../V1/p198-209Ch11.html#p207">207</a>-8. It was from that time, before Bahá'u'lláh was imprisoned in the Síyáh-Chál, that Shaykh Hasan fully recognized the station of Bahá'u'lláh as 'Him Whom God shall make manifest'.
 	   <hr>
-	   7. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 315-16 (Brit.), pp. 431-3 (U.S.).
+	   7. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 315-16 (Brit.), pp. <a href="../../DBNN/p430-464Ch21.html#para5">431</a>-3 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -393,7 +393,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p216">216</a></center><p>
 	   <hr>
-	   10. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#arabic59">59</a>, Arabic.
+	   10. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#arabic59">Arabic #59</a>; <i>The Dawn-Breakers</i>, <a href="../../DBNN/p001-018Ch01.html#p8">p. 8</a>; vol. 4, <a href="../V4/p050-072Ch04.html#p68">p. 68</a>
 	   </small></td>
 </tr>
 <tr>
@@ -413,8 +413,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p217">217</a></center><p>
 	   <hr>
-	   11. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#persian27">27</a>, Persian.<p>
-	   12. <i>ibid</i>., no. <a href="../../../Baha/HiddenWords.html#persian26">26</a>, Persian.
+	   11. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#persian27">Persian #27</a>.<p>
+	   12. <i>ibid</i>., no. <a href="../../../Baha/HiddenWords.html#persian26">Persian #26</a>.
 	   </small></td>
 </tr>
 <tr>
