--- a/Baha'i/Others/ROB/V2/p222-235Ch10.html
+++ b/Baha'i/Others/ROB/V2/p222-235Ch10.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p222">222</a></center><p>
-	   * See <i>The Dawn-Breakers</i>.<p>
+	   * See <a href="../../DBNN/p527-581Ch24.html"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
 	   1. 'Abdu'l-Bahá, quoted by Fádil-i-Mázindarání in <i>Asráru'l-Áthár</i>, vol. V, p. 219.
 	   </small></td>
@@ -73,7 +73,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p224">224</a></center><p>
-	   * For further details of the Zanján upheaval see <i>The Dawn-Breakers</i>.
+	   * For further details of the Zanján upheaval see <a href="../../DBNN/p527-581Ch24.html"><i>The Dawn-Breakers</i></a>.
 	   </small></td>
 </tr>
 <tr>
@@ -117,7 +117,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p228">228</a></center><p>
 	   <hr>
-	   4. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 411 (Brit.), p. 562 (U.S.).
+	   4. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 411 (Brit.), <a href="../../DBNN/p527-581Ch24.html#para73">p. 562</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -135,7 +135,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p229">229</a></center><p>
 	   <hr>
-	   5. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 411 (Brit.), p. 562 (U.S.).
+	   5. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 411 (Brit.), <a href="../../DBNN/p527-581Ch24.html#para73">p. 562</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
