--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -47,7 +47,8 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td VALIGN=top><small><center><a name="p236">236</a></center><p>
 	   <hr>
 	   <hr>
-	   [Súriy-i-Damm] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
+	   [Súriy-i-Damm] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a><p>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plxii">Preface</a>
 	   </small></td>
 </tr>
 <tr>
@@ -217,7 +218,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td></td>
        <td VALIGN=top><small><center><a name="p245">245</a></center><p>
 	   * Sections <a href="../../../Baha/GL/p003-346.html#LIII">LIII</a> and <a href="../../../Baha/GL/p003-346.html#LXXV">LXXV</a>.<p>
-	   † For more information see <i>The Dawn-Breakers</i>.<p>
+	   † For more information see <a href="../../DBNN/p378-429Ch20.html#para216"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
 	   8. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#LX">lx</a>.
 	   </small></td>
@@ -230,8 +231,8 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p246">246</a></center><p>
-	   * For details see <i>The Dawn-Breakers</i>.<p>
-	   † See <i>The Dawn-Breakers</i>.<p>
+	   * For details see <a href="../../DBNN/p324-377Ch19.html"><i>The Dawn-Breakers</i></a>.<p>
+	   † See <a href="../../DBNN/p595-650Ch26.html"><i>The Dawn-Breakers</i></a>.<p>
 	   ‡ One of the Apostles of Bahá'u'lláh. We shall refer to him in more detail in <a href="../V3/p467-483Index.html#Kázim-i-Samandar,Shaykh">vol. III</a>.
 
 	   </small></td>
@@ -367,9 +368,9 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p256">256</a></center><p>
-	   * See <i>The Dawn-Breakers</i> and vol. 1, <a href="../V1/p325-331Apndx_III.html">Appendix III</a>.<p>
+	   * See <a href="../../DBNN/p465-499Ch22.html"><i>The Dawn-Breakers</i></a> and vol. 1, <a href="../V1/p325-331Apndx_III.html">Appendix III</a>.<p>
 	   <hr>
-	   17. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 44 (Brit.), p. 65 (U.S.).
+	   17. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 44 (Brit.), <a href="../../DBNN/p047-096Ch03.html#para19">p. 65</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -385,7 +386,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td></td>
        <td VALIGN=top><small><center><a name="p257">257</a></center><p>
 	   <hr>
-	   18. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 347-8 (Brit.), pp. 471-2 (U.S.).
+	   18. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 347-8 (Brit.), pp. <a href="../../DBNN/p465-499Ch22.html#para14">471</a>-2 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -404,7 +405,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   ‡ Bahá'u'lláh has forbidden His followers to follow this practice which was current among the Bábís. Although Bahá'u'lláh has counselled His followers not to resort to force in the face of persecution, this does not mean that they should stand idly by and make no defence of themselves when personally attacked. For further details see vol. 1, pp. <a href="../V1/p257-282Ch16.html#p278">278</a>-9.<p>
 	   § See vol. 1, p. <a href="../V1/p105-152Ch09.html#p144">144</a>.<p>
 	   <hr>
-	   19. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 348-9 (Brit.), p. 473 (U.S.).
+	   19. Quoted by Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 348-9 (Brit.), <a href="../../DBNN/p465-499Ch22.html#para18">p. 473</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
