--- a/Baha'i/Others/ROB/V2/p337-369Ch16.html
+++ b/Baha'i/Others/ROB/V2/p337-369Ch16.html
@@ -285,7 +285,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p353">353</a></center><p>
-	   * For more information see <i>The Dawn-Breakers</i>.<p>
+	   * For more information see <a href="../../DBNN/p288-300Ch16.html"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
 	   12. Bahá'u'lláh, quoted by Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', <i>The World Order of Bahá'u'lláh</i>, p. 117.
 	   </small></td>
@@ -300,7 +300,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p354">354</a></center><p>
 	   * See <i>Qur'án</i> ii. 219, iv. 43 and v. 93-4. <p>
-	   † See <i>The Dawn-Breakers</i>.<p>
+	   † See <i>The Dawn-Breakers</i> [<a href="../../DBNN/p324-377Ch19.html">Mázindarán</a>, <a href="../../DBNN/p527-581Ch24.html">Zanjá</a>n, <a href="../../DBNN/p465-499Ch22.html">Nayríz</a>].<p>
 	   <hr>
 	   [timing of revelation] <i>The Kitáb-i-Aqdas</i>, Introduction, <a href="../../../Baha/KA/p001-011Intro.html#p8">p. 8</a>
 	   </small></td>
