--- a/Baha'i/Others/ROB/V2/p451-454Biblio.html
+++ b/Baha'i/Others/ROB/V2/p451-454Biblio.html
@@ -84,7 +84,7 @@
 	   MISBÁH, MÍRZÁ 'AZÍZU'LLÁH. 'Bazm-i-Haqáyiq' (The Banquet of Realities). Published in <i>Díván-i-Misbáh</i>. Tihrán: Bahá'í Publishing Trust, 122 B.E. (A.D. 1965).<p>
 	   MU'AYYAD, DR. HABÍB. <i>Khátirát-i-Habíb</i>. Memoirs of Habíb. Tihrán: 1961.<p>
 	   MUHAMMAD-TÁHIR-I-MÁLMÍRÍ, HÁJÍ. <i>Táríkh-i-Shuhadáy-i-Yazd</i>. (History of the Martyrs of Yazd). Cairo: 1342 A.H. (A.D. 1926).<p>
-	   NABÍL-I-A'ZAM. (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932. London: Bahá'í Publishing Trust, 1953.<p>
+	   NABÍL-I-A'ZAM. (Muhammad-i-Zarandí). <a href="../../DBNN/Cover.html"><i>The Dawn-Breakers</i></a>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932. London: Bahá'í Publishing Trust, 1953.<p>
 	   SAMANDAR, SHAYKH KÁZIM. <i>Táríkh-i-Samandar</i>. (The History of Samandar). Tihrán: Bahá'í Publishing Trust, 131 B.E. (A.D. 1974).<p>
 	   SHOGHI EFFENDI. <i>The Advent of Divine Justice</i>. First published 1939. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1963.<p>
 	   <blockquote><i><a href="../../../SE/GPB/Cover.html">God Passes By</a></i>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p></blockquote>
