--- a/Baha'i/Others/ROB/V2/p137-151Ch06.html
+++ b/Baha'i/Others/ROB/V2/p137-151Ch06.html
@@ -42,7 +42,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p137">137</a></center><p>
 	   * See pp. <a href="p397-421Ch19.html#p411">411</a>-13 ff.<p>
-	   † See <i>The Dawn-Breakers</i>.<p>
+	   † See <a href="../../DBNN/p679-685Index.html#DBNN-Jáníy-i-Káshání,Hájí,Mírzá"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
 	   1. Bahá'u'lláh, quoted by Fádil-i-Mázindarání, <i>Asráru'l-Áthár</i>, vol. V, p. 106.
 	   <hr>
@@ -100,7 +100,10 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p141">141</a></center><p>
 	   * Bahá'u'lláh.<p>
-	   † Two lines of the poem <i>Sáqí-Az-Ghayb-i-Baqá</i>, revealed by Bahá'u'lláh in Kurdistán and quoted in <i>The Dawn-Breakers</i>, p. 96 (Brit.), pp. 137-8 (U.S.).
+	   † Two lines of the poem <i>Sáqí-Az-Ghayb-i-Baqá</i>, revealed by Bahá'u'lláh in Kurdistán and quoted in <i>The Dawn-Breakers</i>, p. 96 (Brit.), pp. <a href="../../DBNN/p129-141Ch07.html#para15">137</a>-8 (U.S.).
+	   <hr>
+	   <hr>
+	   ["If thine aim..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="p029-054Ch02.html#p54">p. 54</a>
 	   </small></td>
 </tr>
 <tr>
@@ -219,7 +222,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p146">146</a></center><p>
-	   * For further information refer to <i>The Dawn-Breakers</i>.<p>
+	   * For further information refer to <a href="../../DBNN/p288-300Ch16.html"><i>The Dawn-Breakers</i></a>.<p>
 	   † Him Whom God shall make manifest. (A.T.)<p>
 	   <hr>
 	   11. The Báb, quoted by Bahá'u'lláh in <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para206">p. 141</a>.
