--- a/Baha'i/Others/ROB/V2/p370-387Ch17.html
+++ b/Baha'i/Others/ROB/V2/p370-387Ch17.html
@@ -218,6 +218,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p382">382</a></center><p>
 	   * For a brief outline of her distinguished career, see vol. 1, pp. <a href="../V1/p153-197Ch10.html#p154">154</a>-5.
+	   <hr>
+	   <i>The Dawn-Breakers</i>, <a href="../../DBNN/Introduction.html#plviii">Genealogy of the Báb</a>
 	   </small></td>
 </tr>
 <tr>
@@ -238,7 +240,7 @@
 	   § Descendants of the maternal uncles of the Báb and those of the two brothers and the sister of the wife of the Báb are known as the Afnán (The Twigs).<p>
 	   &para; Áqá Mírzá Áqá was one of the outstanding members of the Afnán family. He was instrumental in encouraging Hájí Siyyid Muhammad, the uncle of the Báb, to proceed to Baghdád and attain the presence of Bahá'u'lláh. He rendered distinguished services to the Faith. Bahá'u'lláh has granted him and his descendants the custodianship of the House of the Báb in Shíráz. We shall refer to him again in future volumes [<a href="../V3/p467-483Index.html#Áqáy-i-Afnán,Mírzá">3</a>, <a href="../V4/p463-485Index.html#ÁqáMírzáÁqáy-i-Afnán">4</a>]. (A.T.)<p>
 	   <hr>
-	   15. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 139 (Brit.), pp. 191-2 (U.S.).
+	   15. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, p. 139 (Brit.), pp. <a href="../../DBNN/p170-198Ch09.html#para47">191</a>-2 (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -286,7 +288,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p386">386</a></center><p>
 	   * The first believer of the Bábí Dispensation. (A.T.)<p>
-	   † For more information, see <i>The Dawn-Breakers</i>. (A.T.)<p>
+	   † For more information, see <a href="../../DBNN/p170-198Ch09.html#para53"><i>The Dawn-Breakers</i></a>. (A.T.)<p>
 	   <hr>
 	   17. Quoted by Muhammad-'Alí Faizi, <i>Khánidán-i-Afnán</i>, p. 161 ff.
 	   </small></td>
