--- a/Baha'i/Others/ROB/V2/p388-396Ch18.html
+++ b/Baha'i/Others/ROB/V2/p388-396Ch18.html
@@ -42,7 +42,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p388">388</a></center><p>
 	   * The first of the Báb's disciples.<p>
-	   † See <i>The Dawn-Breakers</i>.
+	   † See <a href="../../DBNN/p324-377Ch19.html"><i>The Dawn-Breakers</i></a>.
 	   <hr>
 	   <hr>
 	   [Súriy-i-Ghusn] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para188">p. 176</a>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para13">p. 242</a>
