--- a/Baha'i/Others/ROB/V3/p052-072Ch03.html
+++ b/Baha'i/Others/ROB/V3/p052-072Ch03.html
@@ -286,7 +286,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p63">63</a></center><p>
-	   * One of the Letters of the Living; see vol. 2, pp. <a href="../V2/p137-151Ch06.html#p144">144</a>-5.
+	   * One of the <a href="../../DBNN/BabsAutographTablets.html#para16">Letters of the Living</a>; see vol. 2, pp. <a href="../V2/p137-151Ch06.html#p144">144</a>-5.
 	   </small></td>
 </tr>
 <tr>
@@ -352,7 +352,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p68">68</a></center><p>
 	   * In the old days there was no public lighting and therefore it was necessary to carry a lantern at night. Important people always had servants who performed this service for them.<p>
-	   † see Nabíl-i-A'zam, <i>The Dawn-Breakers</i>.<p>
+	   † see Nabíl-i-A'zam, <a href="../../DBNN/p324-377Ch19.html#para73"><i>The Dawn-Breakers</i></a>.<p>
 	   ‡ see vol. 1, p. <a href="../V1/p045-052Ch04.html#p50">50</a>.
 	   </small></td>
 </tr>
