--- a/Baha'i/Others/ROB/V3/p174-203Ch09.html
+++ b/Baha'i/Others/ROB/V3/p174-203Ch09.html
@@ -392,7 +392,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p198">198</a></center><p>
 	   <hr>
-	   13. <i>The Dawn-Breakers</i>, pp. 245-8.
+	   13. <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p243-260Ch13.html#para5">245</a>-8.
 	   </small></td>
 </tr>
 <tr>
