--- a/Baha'i/Others/ROB/V3/p253-274Ch12.html
+++ b/Baha'i/Others/ROB/V3/p253-274Ch12.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V3\p253-274Ch12.html -->
 
+<!--Issues List
+changed Mullá Sádiq-Khurásání to Mullá Sádiq-i-Khurásání to match The Dawn-Breakers
+
+-->
+
+
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Chapter 12</title>
@@ -50,11 +56,11 @@
 	   meeting the Báb several times in the city of Karbilá prior to His declaration. He had been deeply impressed by the radiance and gentleness mingled with majesty which the youthful Báb evinced as He prayed most tearfully at the Shrine of Imám Husayn. Ismu'lláhu'l-Asdaq is reported to have exclaimed when his eyes first fell on Him, 'Glorified be our Lord, the Most High!' He had become a devoted admirer of that Youth while in Karbilá, in spite of the fact that the Ismu'lláh was a learned divine, one who was held in high esteem by the people, while the Báb was a youth with little education. He had also witnessed the extraordinary reverence shown to that Youth by Siyyid Kázim-i-Rashtí,* the celebrated leader of the Shaykhí community, who knew that He was none other than the Qá'im Himself, the Promised One of Islám.<p>
 	   Soon after the Declaration of the Báb in 1844, when Mullá Husayn was on his way to Tihrán, he met Ismu'lláhu'l-Asdaq in the city of Isfahán, informed him of the advent of the Báb and gave him some of His Writings to read. Upon reading a few pages he became an ardent believer. But Mullá Husayn, as bidden by the Báb, was not allowed to reveal the identity of the Báb as yet.<p>
 	   In his narratives, Nabíl-i-A'zam records the circumstances in which the Ismu'lláh became an ardent believer:<p>
-	   <blockquote>Mullá Sádiq-Khurásání, formerly known as Muqaddas, and surnamed by Bahá'u'lláh, Ismu'lláhu'l-Asdaq, who according to the instructions of Siyyid Kázim, had during the last five years been residing in Isfahán and had been preparing the way for the advent of the new Revelation, was also among the first believers who identified themselves with the Message proclaimed by the Báb. As soon as he learned of the arrival of Mullá Husayn in Isfahán, he hastened to meet him. He gives the following account of his first interview, which took place at night in the home of Mírzá Muhammad-'Alíy-i-Nahrí: 'I asked Mullá Husayn to divulge the name of Him who claimed to be the promised</blockquote> 
+	   <blockquote>Mullá Sádiq-i-Khurásání, formerly known as Muqaddas, and surnamed by Bahá'u'lláh, Ismu'lláhu'l-Asdaq, who according to the instructions of Siyyid Kázim, had during the last five years been residing in Isfahán and had been preparing the way for the advent of the new Revelation, was also among the first believers who identified themselves with the Message proclaimed by the Báb. As soon as he learned of the arrival of Mullá Husayn in Isfahán, he hastened to meet him. He gives the following account of his first interview, which took place at night in the home of Mírzá Muhammad-'Alíy-i-Nahrí: 'I asked Mullá Husayn to divulge the name of Him who claimed to be the promised</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p254">254</a></center><p>
-	   * see Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, for further information.
+	   * see Nabíl-i-A'zam, <a href="../../DBNN/p679-685Index.html#DBNN-Kázim-i-Rashtí,Siyyid"><i>The Dawn-Breakers</i></a>, for further information.
 	   </small></td>
 </tr>
 <tr>
@@ -65,9 +71,11 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p255">255</a></center><p>
 	   * see vol. 1, <a href="../V1/p332-336Apndx_IV.html">Appendix IV</a>.<p>
-	   † The last but the greatest of the company of the Báb's disciples. See <i>The Dawn-Breakers</i>.<p>
+	   † The last but the greatest of the company of the Báb's disciples. See <a href="../../DBNN/p679-685Index.html#DBNN-Quddús"><i>The Dawn-Breakers</i></a>.<p>
 	   <hr>
-	   1. <i>The Dawn-Breakers</i>, pp. 100-101.
+	   1. <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p097-108Ch04.html#para6">100</a>-101.
+	   <hr>
+	   <a href="../../DBNN/BabsAutographTablets.html">Letters of the Living</a>	   
 	   </small></td>
 </tr>
 <tr>
@@ -79,7 +87,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p256">256</a></center><p>
 	   <hr>
-	   2. <i>The Dawn-Breakers</i>. pp. 147-8.
+	   2. <i>The Dawn-Breakers</i>. pp. <a href="../../DBNN/p142-169Ch08.html#para8">147</a>-8.
 	   </small></td>
 </tr>
 <tr>
@@ -90,7 +98,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p257">257</a></center><p>
-	   * see <i>The Dawn-Breakers</i>.<p>
+	   * see <a href="../../DBNN/p324-377Ch19.html"><i>The Dawn-Breakers</i></a>.<p>
 	   † He was 'Alí-Muhammad, known as Ibn-i-Asdaq, later appointed by Bahá'u'lláh as a Hand of the Cause of God.<p>
 	   ‡ see pp. <a href="p087-107Ch05.html#p88">88</a>-91.<p>
 	   § see vol. 2, pp. <a href="../V2/p236-269Ch11.html#p245">245</a>-7.
@@ -357,7 +365,7 @@
 	   <small>
 	   		  <center>
 			  		  THE HOUSE OF 'ÚDÍ KHAMMÁR IN 'AKKÁ<p>
-					  The room where the <a href="../../../Baha/KA/Cover.html">Kitáb-i-Aqdas</a> was revealed is at the upper left
+					  The room where <a href="../../../Baha/KA/Cover.html"><i>The Kitáb-i-Aqdas</i></a> was revealed is at the upper left
 	   		  </center>
 	   </small>
 	   </td>
@@ -377,7 +385,7 @@
 	   </H1>
 	   <small>
 	   		  <center>
-			  		  THE ROOM WHERE THE <a href="../../../Baha/KA/Cover.html">KITÁB-I-AQDAS</a> WAS REVEALED<p>
+			  		  THE ROOM WHERE <a href="../../../Baha/KA/Cover.html"><i>THE KITÁB-I-AQDAS</i></a> WAS REVEALED<p>
 					  The room of Bahá'u'lláh in the house of 'Údí Khammár. The furnishings were added later
 	   		  </center>
 	   </small>
