--- a/Baha'i/Others/ROB/V3/p449-454Biblio.html
+++ b/Baha'i/Others/ROB/V3/p449-454Biblio.html
@@ -120,7 +120,7 @@
 </tr>
 <tr>
        <td>
-	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932.<p>
+	   NABÍL-I-A'ZAM (Muhammad-i-Zarandí). <a href="../../DBNN/Cover.html"><i>The Dawn-Breakers</i></a>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932.<p>
 	   OLIPHANT, LAURENCE. <i>Haifa, or Life in the Holy Land 1882-1885</i>. Jerusalem: Canaan Publishing House, rev. edn. 1976.<p> 
 	   <i>Prayer, Meditation and the Devotional Attitude</i>. Extracts from the Writings of Bahá'u'lláh, 'Abdu'l-Bahá, and Shoghi Effendi. Compiled by the Research Department of The Universal House of Justice. Wilmette, Illinois: Bahá'í Publishing Trust, 1980.<p>
 	   <i>Principles of Bahá'í Administration</i>. London: Bahá'í Publishing Trust, rev. edn. 1976.<p>
