--- a/Baha'i/Others/ROB/V3/p467-483Index.html
+++ b/Baha'i/Others/ROB/V3/p467-483Index.html
@@ -971,7 +971,7 @@
        <td>
 	   <blockquote>
 	   <small>
-	   Tabarsí, Shaykh <a href= "../V3/p001-031Ch01.html#p27">27</a>, <a href= "../V3/p087-107Ch05.html#p101">101</a>, <a href= "../V3/p253-274Ch12.html#p257">257</a><p>
+	   <a name="Tabarsí,Shaykh"></a>Tabarsí, Shaykh <a href= "../V3/p001-031Ch01.html#p27">27</a>, <a href= "../V3/p087-107Ch05.html#p101">101</a>, <a href= "../V3/p253-274Ch12.html#p257">257</a><p>
 	   Tabríz, <a href= "../V3/p174-203Ch09.html#p188">188n.</a>, <a href= "../V3/p174-203Ch09.html#p191">191</a>, <a href= "../V3/p253-274Ch12.html#p269">269</a>, <b><a href= "../V3/p422-432Apndx_I.html#p422">422</a>-4</b><p>
 	   Táhirih, <a href= "../V3/p253-274Ch12.html#p266">266</a>, <a href= "../V3/p253-274Ch12.html#p267">267</a><p>
 	   Tákúr, <a href= "../V3/p400-421Ch18.html#p415">415</a><p>
@@ -1055,12 +1055,12 @@
 <tr>
        <td BGCOLOR="#00925b"><br><br><center>
 	   <h3>THE REVELATION OF BAHÁ'U'LLÁH</h3><p>
-	   <small>VOLUME 3 : `Akká, The Early Years 1868-77</small><p>
+	   <small>VOLUME 3 : 'Akká, The Early Years 1868-77</small><p>
 	   <h3>ADIB TAHERZADEH</h3><p></center>
 	   <blockquote><small>
 	   <i>The Revelation of Bahá'u'lláh</i> is a four-volume series about the Scriptures of the Bahá'í Faith, the most recent of the world's religions. It is a unique survey of the Writings of the Founder, Bahá'u'lláh (1817-92), which were revealed during a ministry of nearly forty years spent in exile from his native Írán in Baghdad, Constantinople, Adrianople, and the prison city of 'Akká in the Holy Land.<p>
 	   Mr Taherzadeh, using both authentic English translations and original sources, describes the contents of all the major works of Bahá'u'lláh, including many unknown in the West. To this he adds much fascinating background, by recounting events in the life of Bahá'u'lláh and in the lives of some of His companions and followers whom He addressed or who served Him in various ways. These accounts are enhanced by extracts from memoirs of the time and by photographs.<p>
-	   This book describes the exile and imprisonment of Bahá'u'lláh and his companions in the fortress city of `Akká, including the tragic death of his son, The Purest Branch. It delineates the major themes of the <i>Kitáb-i-Aqdas</i>, the Most Holy Book revealed behind the walls of that city, and describes many other weighty Tablets, including those sent by Bahá'u'lláh to the kings and rulers of the time.<p>
+	   This book describes the exile and imprisonment of Bahá'u'lláh and his companions in the fortress city of 'Akká, including the tragic death of his son, The Purest Branch. It delineates the major themes of the <i>Kitáb-i-Aqdas</i>, the Most Holy Book revealed behind the walls of that city, and describes many other weighty Tablets, including those sent by Bahá'u'lláh to the kings and rulers of the time.<p>
 	   </blockquote>
 
 	   <center><b>OTHER VOLUMES IN THIS SERIES</b></center><p>
