--- a/Baha'i/Others/ROB/V3/p087-107Ch05.html
+++ b/Baha'i/Others/ROB/V3/p087-107Ch05.html
@@ -61,6 +61,9 @@
        <td VALIGN=top><small><center><a name="p88">88</a></center><p>
 	   * Not to be confused with Mullá Muhammad-i-Zarandí, Nabíl-i-A'zam or Mullá Muhammad-i-Qá'iní, Nabíl-i-Akbar.<p>
 	   † see vols <a href="../V1/p351-363Index.html#Yahyá,Mírzá">1</a> and <a href="../V2/p469-476Index.html#Yahyá,Mírzá">2</a>.
+	   <hr>
+	   <hr>
+	   <a href="../../DBNN/BabsAutographTablets.html">Letters of the Living</a>
 	   </small></td>
 </tr>
 <tr>
@@ -302,7 +305,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p101">101</a></center><p>
 	   * Not to be confused with the renowned Hájí Mírzá Haydar-'Alíyi-Isfahání whose chronicles we are quoting in these pages.<p>
-	   † see Nabíl-i-A'zam, <i>The Dawn-Breakers</i>.<p>
+	   † see Nabíl-i-A'zam, <a href="../../DBNN/p324-377Ch19.html"><i>The Dawn-Breakers</i></a>.<p>
 	   ‡ The 'abá was a cloak worn by orientals in those days. It was normally placed over the shoulders, but on cold days it was customary to pull it over one's head.
 	   </small></td>
 </tr>
