--- a/Baha'i/Others/ROB/V3/p422-432Apndx_I.html
+++ b/Baha'i/Others/ROB/V3/p422-432Apndx_I.html
@@ -42,7 +42,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p422">422</a></center><p>
-	   * For details of his martyrdom see <i>The Dawn-Breakers</i>, pp. 610-21.
+	   * For details of his martyrdom see <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p595-650Ch26.html#para20">610</a>-21.
 	   </small></td>
 </tr>
 <tr>
@@ -56,7 +56,7 @@
        <td VALIGN=top><small><center><a name="p423">423</a></center><p>
 	   * Imám 'Alí. (A.T.)<p>
 	   <hr>
-	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. 617-18.
+	   1. Nabíl-i-A'zam, <i>The Dawn-Breakers</i>, pp. <a href="../../DBNN/p595-650Ch26.html#para26">617</a>-18.
 	   </small></td>
 </tr>
 <tr>
